--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -199,8 +199,6 @@ jobs:
         uses: azure/cli@v1
         with:
           inlineScript: |
-            # Note: se você estiver usando um plano existente, ajuste existingPlanResourceId para o valor correto,
-            # por ex: "/subscriptions/.../resourceGroups/.../providers/Microsoft.Web/serverfarms/ASP-MiniProjetoCloud2.0"
             DEPLOY_NAME="deploy-funcapp-$(date +%s)"
             echo "Deploy Function App ($FUNCTIONAPP_NAME) sem App Insights..."
             az deployment group create \
@@ -211,41 +209,38 @@ jobs:
                 functionAppName="$FUNCTIONAPP_NAME" \
                 storageAccountName="miniprojetostorage20" \
                 location="$TARGET_LOCATION" \
-                existingPlanResourceId="/subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/MiniProjetoCloud2.0/providers/Microsoft.Web/serverfarms/ASP-MiniProjetoCloud2.0" \
+                existingPlanResourceId="/subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/$RG/providers/Microsoft.Web/serverfarms/ASP-MiniProjetoCloud2.0" \
               --only-show-errors
             echo "Function App deployment concluído: $DEPLOY_NAME"
 
-      - name: Publicar código das Functions (zip-deploy)
-        # Usa o Azure CLI container para zip-deploy:
+      - name: Compactar Azure Functions localmente
+        run: |
+          FUNC_DIR="redditIngestFunc"
+          ZIP_NAME="redditIngestFunc.zip"
+          if [ ! -d "$FUNC_DIR" ]; then
+            echo "Diretório $FUNC_DIR não existe. Abortando."
+            exit 1
+          fi
+          echo "Compactando $FUNC_DIR em $ZIP_NAME..."
+          rm -f "$ZIP_NAME"
+          zip -r "$ZIP_NAME" "$FUNC_DIR"/*
+          echo "ZIP criado: $ZIP_NAME"
+
+      - name: Publicar código das Functions (zip-deploy) via Azure CLI
         uses: azure/cli@v1
         with:
           inlineScript: |
-            echo "Preparando publicação das Azure Functions locais em redditIngestFunc..."
-            # Instala zip se não existir
-            if ! command -v zip &>/dev/null; then
-              echo "Instalando zip..."
-              apt-get update && apt-get install -y zip
-            fi
-            # Compacta o diretório de funções
-            FUNC_DIR="redditIngestFunc"
             ZIP_NAME="redditIngestFunc.zip"
-            if [ ! -d "$FUNC_DIR" ]; then
-              echo "Diretório $FUNC_DIR não existe. Abortando publicação."
+            if [ ! -f "$ZIP_NAME" ]; then
+              echo "Arquivo $ZIP_NAME não encontrado. Abortando."
               exit 1
             fi
-            echo "Compactando $FUNC_DIR em $ZIP_NAME..."
-            cd "$FUNC_DIR"
-            zip -r "../$ZIP_NAME" ./*
-            cd ..
-            # Executa o zip-deploy
             echo "Fazendo zip-deploy para Function App '$FUNCTIONAPP_NAME'..."
             az functionapp deployment source config-zip \
               --resource-group "$RG" \
               --name "$FUNCTIONAPP_NAME" \
               --src "$ZIP_NAME"
             echo "Publicação concluída."
-            # opcional: remover ZIP local
-            rm -f "$ZIP_NAME"
 
       - name: Mostrar outputs finais Web + Function
         uses: azure/cli@v1
