--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -214,7 +214,6 @@ jobs:
               --only-show-errors
             echo "Function App deployment concluído."
 
-
       - name: Instalar Azure Functions Core Tools
         run: |
           # Executado no runner Ubuntu, não no container azure-cli
@@ -242,28 +241,44 @@ jobs:
         env:
           RG: ${{ env.RG }}
           FUNCTIONAPP_NAME: ${{ env.FUNCTIONAPP_NAME }}
-          AZURE_FUNCTIONAPP_PACKAGE_PATH: "${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}"
+          AZURE_FUNCTIONAPP_PACKAGE_PATH: "./redditIngestFunc"
         run: |
-          # Roda no runner Ubuntu após azure/login
           cd "$AZURE_FUNCTIONAPP_PACKAGE_PATH"
           echo "Publicando Function App '$FUNCTIONAPP_NAME' em RG '$RG'..."
-          # --python faz remote build, instalar dependências e deploy
-          func azure functionapp publish "$FUNCTIONAPP_NAME" --python --no-build --force
+          func azure functionapp publish "$FUNCTIONAPP_NAME" --python
+
+      - name: Obter master key da Function App e atualizar Web App
+        env:
+          RG: ${{ env.RG }}
+          FUNCTIONAPP_NAME: ${{ env.FUNCTIONAPP_NAME }}
+          WEBAPP_NAME: ${{ env.WEBAPP_NAME }}
+        run: |
+          echo "Obtendo master key da Function App '$FUNCTIONAPP_NAME'..."
+          MASTER_KEY=$(az functionapp keys list \
+            --resource-group "$RG" \
+            --name "$FUNCTIONAPP_NAME" \
+            --query "masterKey" -o tsv)
+          if [ -z "$MASTER_KEY" ]; then
+            echo "Erro: não conseguiu obter master key da Function App. Abortando atualização de FUNCTION_URL."
+            exit 1
+          fi
+          FUNCTION_URL_FULL="https://${FUNCTIONAPP_NAME}.azurewebsites.net/api/SearchFunction?code=${MASTER_KEY}"
+          echo "FUNCTION_URL completa (com master key): $FUNCTION_URL_FULL"
+          az webapp config appsettings set \
+            --resource-group "$RG" \
+            --name "$WEBAPP_NAME" \
+            --settings FUNCTION_URL="$FUNCTION_URL_FULL"
+          echo "App Setting FUNCTION_URL atualizado."
 
       - name: Reiniciar Web App e Function App após deploy
         uses: azure/cli@v1
         with:
           inlineScript: |
             echo "Reiniciando Web App '$WEBAPP_NAME'..."
-            az webapp restart \
-              --resource-group "$RG" \
-              --name "$WEBAPP_NAME"
-            echo "Web App reiniciado."
+            az webapp restart --resource-group "$RG" --name "$WEBAPP_NAME"
             echo "Reiniciando Function App '$FUNCTIONAPP_NAME'..."
-            az functionapp restart \
-              --resource-group "$RG" \
-              --name "$FUNCTIONAPP_NAME"
-            echo "Function App reiniciado."
+            az functionapp restart --resource-group "$RG" --name "$FUNCTIONAPP_NAME"
+            echo "Reiniciado."
 
       - name: Mostrar outputs finais Web + Function
         uses: azure/cli@v1
