--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,8 @@ jobs:
       TARGET_LOCATION: 'francecentral'
       WEBAPP_NAME: 'minhaapp-rodrig0salv'
       AZURE_FUNCTIONAPP_PACKAGE_PATH: './redditIngestFunc'
+      # Nome fixo (ou adaptável) para o Translator; ajuste se precisar:
+      TRANSLATOR_NAME: 'translator-func-rodrig0salv'
       # Se usar plano existente, defina em secrets ou variável:
       # FUNCTION_PLAN_RESOURCE_ID: '/subscriptions/.../resourceGroups/.../providers/Microsoft.Web/serverfarms/ASP-...'
 
@@ -166,6 +168,46 @@ jobs:
               -o tsv)
             echo "SAS_TOKEN=$sasToken" >> $GITHUB_OUTPUT
 
+      - name: Criar Translator Free
+        uses: azure/cli@v1
+        with:
+          inlineScript: |
+            # Usa TRANSLATOR_NAME fixo definido em env
+            echo "Criando ou garantindo Translator '${TRANSLATOR_NAME}' em SKU Free..."
+            # Já garantimos RG criado acima
+            if az cognitiveservices account show --name "$TRANSLATOR_NAME" --resource-group "$RG" &>/dev/null; then
+              echo "Translator $TRANSLATOR_NAME já existe em RG $RG."
+            else
+              az cognitiveservices account create \
+                --name "$TRANSLATOR_NAME" \
+                --resource-group "$RG" \
+                --kind Translator \
+                --sku F0 \
+                --location "$TARGET_LOCATION" \
+                --yes
+              echo "Translator criado: $TRANSLATOR_NAME"
+            fi
+
+            # Obter endpoint e key do Translator
+            echo "Obtendo endpoint e chave do Translator '$TRANSLATOR_NAME'..."
+            ENDPOINT=$(az cognitiveservices account show \
+              --name "$TRANSLATOR_NAME" \
+              --resource-group "$RG" \
+              --query "properties.endpoint" -o tsv)
+            KEY=$(az cognitiveservices account keys list \
+              --name "$TRANSLATOR_NAME" \
+              --resource-group "$RG" \
+              --query "key1" -o tsv)
+            echo "TRANSLATOR_ENDPOINT=$ENDPOINT" >> $GITHUB_ENV
+            echo "TRANSLATOR_KEY=$KEY" >> $GITHUB_ENV
+            echo "Endpoint do Translator: $ENDPOINT"
+            # Opcional: também configurar na Web App caso queira:
+            az webapp config appsettings set \
+              --resource-group "$RG" \
+              --name "$WEBAPP_NAME" \
+              --settings TRANSLATOR_ENDPOINT="$ENDPOINT" TRANSLATOR_KEY="$KEY"
+            echo "App Settings TRANSLATOR_ENDPOINT/TRANSLATOR_KEY atualizados na Web App '$WEBAPP_NAME'."
+
       - name: Deploy Web App (sem App Insights nem Managed Identity via parâmetro)
         uses: azure/cli@v1
         with:
@@ -193,7 +235,8 @@ jobs:
         uses: azure/cli@v1
         with:
           inlineScript: |
-            echo "Deploy Function App ($FUNCTIONAPP_NAME)..."
+            echo "Deploy Function App ($FUNCTIONAPP_NAME) via Bicep..."
+            # Passa translatorEndpoint e translatorKey nos parâmetros de Bicep (se o template aceitar)
             az deployment group create \
               --name "deploy-funcapp-$(date +%s)" \
               --resource-group "$RG" \
@@ -209,8 +252,8 @@ jobs:
                 redditPassword="miniprojetocloud" \
                 secretValue="DoywW0Lcc26rvDforDKkLOSQsUUwYA" \
                 clientIdValue="bzG6zHjC23GSenSIXe0M-Q" \
-                translatorEndpoint="" \
-                translatorKey="" \
+                translatorEndpoint="${{ env.TRANSLATOR_ENDPOINT }}" \
+                translatorKey="${{ env.TRANSLATOR_KEY }}" \
               --only-show-errors
             echo "Function App deployment concluído."
 
@@ -242,9 +285,12 @@ jobs:
           RG: ${{ env.RG }}
           FUNCTIONAPP_NAME: ${{ env.FUNCTIONAPP_NAME }}
           AZURE_FUNCTIONAPP_PACKAGE_PATH: "./redditIngestFunc"
+          TRANSLATOR_ENDPOINT: ${{ env.TRANSLATOR_ENDPOINT }}
+          TRANSLATOR_KEY: ${{ env.TRANSLATOR_KEY }}
         run: |
           cd "$AZURE_FUNCTIONAPP_PACKAGE_PATH"
           echo "Publicando Function App '$FUNCTIONAPP_NAME' em RG '$RG'..."
+          # O Remote Build provisiona as dependências conforme requirements.txt
           func azure functionapp publish "$FUNCTIONAPP_NAME" --python
 
       - name: Obter master key da Function App e atualizar Web App
@@ -252,6 +298,8 @@ jobs:
           RG: ${{ env.RG }}
           FUNCTIONAPP_NAME: ${{ env.FUNCTIONAPP_NAME }}
           WEBAPP_NAME: ${{ env.WEBAPP_NAME }}
+          TRANSLATOR_ENDPOINT: ${{ env.TRANSLATOR_ENDPOINT }}
+          TRANSLATOR_KEY: ${{ env.TRANSLATOR_KEY }}
         run: |
           echo "Obtendo master key da Function App '$FUNCTIONAPP_NAME'..."
           MASTER_KEY=$(az functionapp keys list \
@@ -264,11 +312,18 @@ jobs:
           fi
           FUNCTION_URL_FULL="https://${FUNCTIONAPP_NAME}.azurewebsites.net/api/SearchFunction?code=${MASTER_KEY}"
           echo "FUNCTION_URL completa (com master key): $FUNCTION_URL_FULL"
+          # Atualiza Web App
           az webapp config appsettings set \
             --resource-group "$RG" \
             --name "$WEBAPP_NAME" \
             --settings FUNCTION_URL="$FUNCTION_URL_FULL"
-          echo "App Setting FUNCTION_URL atualizado."
+          echo "App Setting FUNCTION_URL atualizado na Web App '$WEBAPP_NAME'."
+          # Atualiza Function App para incluir as variáveis do Translator
+          az functionapp config appsettings set \
+            --resource-group "$RG" \
+            --name "$FUNCTIONAPP_NAME" \
+            --settings TRANSLATOR_ENDPOINT="$TRANSLATOR_ENDPOINT" TRANSLATOR_KEY="$TRANSLATOR_KEY"
+          echo "App Settings TRANSLATOR_ENDPOINT/TRANSLATOR_KEY atualizados na Function App '$FUNCTIONAPP_NAME'."
 
       - name: Reiniciar Web App e Function App após deploy
         uses: azure/cli@v1
